<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tekst_pitanja_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/pitanje_kotlin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dugme_tacno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dugme_tacno" />
        <Button
            android:id="@+id/dugme_netacno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dugme_netacno" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dugme_prethodno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dugme_prethodno"
            app:icon="@drawable/strelica_levo"
            app:iconGravity="end" />

        <Button
            android:id="@+id/dugme_sledece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dugme_sledece"
            app:icon="@drawable/strelica_desno"
            app:iconGravity="end" />
    </LinearLayout>

</LinearLayout>